--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
-    "recharts": "^2.12.7",
     "uuid": "^11.1.0",
     "zod": "^4.0.5"
   },
